--- a/Write_Up/introduction.tex
+++ b/Write_Up/introduction.tex
@@ -2,7 +2,7 @@
 \setcounter{page}{1}
 %\pagenumbering{arabic}
 
-\subsubsection{Introduce}
+%\subsubsection{Introduce}
 
 At the end of the 20th century, the world experienced a global resurgence of vector-borne disease \citep{Gubler}. Diseases that had been well-controlled in the early-to-mid 1900s surged under complacent public health policies and insufficient research funding \citep{Gubler1998}. %Many of these diseases also emerged in novel geographic areas \citep{Gratz1999}. 
 Today, vector-borne diseases represent 17\% of the total global infectious disease burden and cause millions of deaths annually. Mosquito-borne diseases, such as malaria, dengue, Zika, yellow fever, West Nile virus, and chikungunya, singularly infect more than an estimated 200 million individuals worldwide every year \citep{WHOreport}. 
@@ -11,48 +11,26 @@ Surveillance of mosquito populations is a successful method to control the publi
 %In order to understand the potential applications of early warning mosquito abundance models, greater investigation is needed into optimal methodologies of vector abundance models across locations and species. 
 %. 
 
-Mosquito abundances are affected by many factors, including land-use, elevation, and vegetation cover, but meteorological variables, such as temperature and precipitation, are particularly predictive of population dynamics and commonly used in abundance models \citep{Trawinski2008, Li2019, Wang2011, Yoo2016}. The effects of temperature on mosquitoes are well characterised. As ectotherms, mosquito life history traits such as development rate, biting rate, fecundity, and survival, are temperature dependent and vary with changing temperatures \citep{Mordecai2019}. With increasing temperature, trait performance will increase until an optimal temperature is reached, after which, trait performance decreases according to physiological constraints \citep{Amarasekare2012}. Because these traits shape reproductive output, trait variation determines abundance of mosquito populations \citep{Cator2020}. Precipitation affects mosquitoes in more complex ways. Rainfall can create larval habitats in man-made containers or expand natural pooled breeding habitats \citep{Keith2005, Koenraadt2008}. Inter-seasonal variability in larval carrying capacity, which is dependent on rainfall for habitat creation, has been shown to be a main driver of mosquito abundances \citep{Marini2016}. Heavy rainfall, however, can flush immature mosquitoes from aquatic habitats, but the extent of this effect varies among species \citep{Koenraadt2008, Paaijmans2007}. The effect of droughts on abundance is mixed; in some cases, drought is thought to benefit mosquito abundance by eliminating predators of larvae in drying water bodies \citep{Chase2003}. Other research have found that droughts simply increase sample collection, rather than true abundance of mosquitoes \citep{Shaman2002}. In light of projected increases in extreme weather events such as increased heavy rainfall frequency, droughts, and warming temperatures in this century due to climate change, it is vital that the complex effects of temperature and precipitation on vector populations. \citep{Seneviratne2012}.
+Mosquito abundances are affected by many factors, including land-use, elevation, and vegetation cover, but meteorological variables, such as temperature and precipitation, are particularly predictive of population dynamics and commonly used in abundance models \citep{Trawinski2008, Li2019, Wang2011, Yoo2016}. The effects of temperature on mosquitoes are well characterised. As ectotherms, mosquito life history traits such as development rate, biting rate, fecundity, and survival, are temperature dependent and vary with changing temperatures \citep{Mordecai2019}. With increasing temperature, trait performance will increase until an optimal temperature is reached, after which, trait performance decreases according to physiological constraints \citep{Amarasekare2012}. Because these traits shape reproductive output, trait variation determines abundance of mosquito populations \citep{Cator2020}. Precipitation affects mosquitoes in more complex ways. Rainfall can create larval habitats in man-made containers or expand natural pooled breeding habitats \citep{Keith2005, Koenraadt2008}. Inter-seasonal variability in larval carrying capacity, which is dependent on rainfall for habitat creation, has been shown to be a main driver of mosquito abundances \citep{Marini2016}. Heavy rainfall, however, can flush immature mosquitoes from aquatic habitats, but the extent of this effect varies among species \citep{Koenraadt2008, Paaijmans2007}. The effect of droughts on abundance is mixed; in some cases, drought is thought to benefit mosquito abundance by eliminating predators of larvae in drying water bodies \citep{Chase2003}. Other research have found that droughts simply increase sample collection, rather than true abundance of mosquitoes \citep{Shaman2002}. In light of projected increases in extreme weather events such as increased heavy rainfall frequency, droughts, and warming temperatures in this century due to climate change, it is vital that we understand the complex effects of temperature and precipitation on vector populations. \citep{Seneviratne2012}.
 
-Both mechanistic models and statistical models have been used to investigate the impact of climate on mosquito abundance \citep{Ahumada2004, Cailly2012, Yoo2016, Wang2011}. Mechanistic models based on trait responses to climate conditions may allow for longer term and more generalisable forecasting \citep{Cator2020}. The complexity of the relationship between precipitation and mosquito life history, however, complicates the inclusion of this important abundance driver in mechanistic models. Statistical models, on the other hand, can be useful for understanding the explanatory power of drivers \citep{Mordecai2019}. Mosquito abundances have been described phenomenologically by harmonic models, time series ARIMA models, Generalised Linear Models (GLMs), and Generalised Additive Models (GAMs) \citep{Li2019, Trawinski2008, Wang2011, Yoo2016}. GAMs have been used to capture complex and non-linear relationships between climate and abundance as linear models are likely to overestimate the effect of temperature on mosquito abundance at high temperatures \citep{Li2019, Roiz2014, Xu2017}. The inclusion of first-order auto-regressive terms in analysis can perform well to capture density dependent effects.Temporally lagged meteorological variables are typically incorporated. Capture biological mechanisms underpinning abundances such as the time-delayed effect of larval habitat creation from rainfall or the increase in biting rate of female mosquitoes. Some models incorporate autoregressive effects, but these make prediction more difficult.
-	
-In this investigation I am using a wide variety of species across locations where most research has studied single species, single location. This allows me to investigate the generalisability of the characterisation of the drivers of mosquito abundance across geographies and in many species.
+A wide variety mechanistic and statistical modelling techniques have been used to investigate the impact of climate on mosquito abundance \citep{Ahumada2004, Cailly2012, Jian2014, Yoo2016, Wang2011}. Mechanistic models based on trait responses to climate conditions may allow for longer term and more generalisable forecasting \citep{Cator2020}. The complexity of the relationship between precipitation and mosquito life history, however, complicates the inclusion of this important abundance driver in mechanistic models. Statistical models, on the other hand, may be more useful for understanding  explanatory power of environmental variables \citep{Mordecai2019}. Mosquito abundances have been described phenomenologically by harmonic models, time series ARIMA models, Generalised Linear Models (GLMs), and Generalised Additive Models (GAMs) \citep{Li2019, Trawinski2008, Wang2011, Yoo2016}. GAMs have recently been used to capture the complex and non-linear relationships between climate and abundance as linear models are likely to overestimate the effect of temperature on mosquito abundance at high temperatures \citep{Li2019, Roiz2014, Xu2017}. 
 
-I am using data from Florida. Florida has nasty bugs like this one this one and this one and many counties with comprehensive mosquito surveillance. Data is normally limited and no one else has looked at different time scales. With this shiny wonderful great data I will be able to answer the following questions:
+Several unanswered methodological questions about the use of statistical models could limit the applicability of these methods as early warning systems of mosquito abundance and vector borne disease. Temperature and precipitation have both been found to have temporally lagged impacts on mosquito abundance at daily, weekly, and monthly scales \citep{Chuang2012, Poh2019, Xu2017, Wang2011}. In other words, past precipitation and temperature can drive contemporary mosquito population dynamics. Although lags of different time scales capture different effects of environmental drivers, tested methodologies for appropriate temporal resolutions to use for lagged models are non-existent \citep{Mordecai2019}. Most statistical models have also focused on characterising lags and dependence on meteorological variables in single species and limited geographic areas \citep{Chuang2012, Wang2011, Poh2019, Yoo2016}. Because abundance responses to meteorological drivers are also dependent on local land characteristics such as elevation, vegetation cover, and urban structures, climate effects are likely to be location-specific \citep{Ahumada2004, Yoo2016}. In order to understand the applicability of early warning systems for vector species abundances across geographies, the consistency of temporal lag lengths and meteorological abundance drivers in abundance models needs to be assessed across several locations. The inclusion of a first-order auto-regressive term (AR) of lagged abundance in analysis of GAMs can improve model fits by capturing density dependence of mosquito population dynamics and auto-correlative structure of mosquito abundances. \citep{DaCruzFerreira2017, Li2019, Xu2017}. The need for nearly contemporary abundance data for this AR term, however, could limit the real-time forecasting ability of these methods. Research is needed into the trade off in model fit with the use of AR terms to understand how applicable these models are in real time. This study aims to address these gaps in statistical modelling of mosquito abundance dynamics by answering the following questions:
 
-\subsubsection{Gaps}
-- many species/locations
-- use of autoregressive term or not
-%Previous research has found t-1 autoregressive terms to be significantly associated with mosquito abundance \cite{Poh2019}(1 month), \citep{Xu2017} (1 month), 
-
-\subsubsection{Novelty of Research}
-
-Justify choice of Florida
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width= 6in, height = 4in]{../Images/arboviralcases.pdf}
-	\caption{Number of locally transmitted cases of mosquito-borne disease in humans in Florida between 2014 and 2019, as reported by the Florida Department of Health in  \citeyear{DiseaseSurveillance}. Zika was also locally transmitted in 2016 (300 confirmed cases) and 2017 (2 confirmed cases) but are not shown due to the limited scale of the y axis. Imported cases, where infection was contracted elsewhere but reported in Florida, are not included as these were not contracted from Florida mosquitoes. %Imported cases are a threat to public health, however, as they can continue the disease transmission cycle and are a major concern for dengue and Zika.
-	}
-	\label{fig:FDcases}
-\end{figure}
-
-More sustainable systems are needed for vector-borne disease surveillance \citep{Vazquez-Prokopec2010}
-
-Many species, many locations
-
-assessing practical application by comparing predictive power of autoregressive vs non autoregressive model
-
-\subsubsection{Clear-cut Questions}
 \begin{enumerate}
-	%\item Is mean precipitation or number of days of precipitation a better predictor of mosquito abundances?
+	\item Which level of temporal resolution of temperature and precipitation data is best able to predict mosquito abundances?
 	
-	%\item Which temporal lags of temperature and precipitation are most appropriate for the prediction of mosquito abundances?
-
-	\item \textbf{Which level of temporal resolution of temperature and precipitation data is best able to predict mosquito abundances?}
+	\item How consistently can temporal lags and significant meteorological drivers be characterised for species specific abundance models across multiple locations?
 	
-	\item \textbf{How consistently can temporal lags and meteorological variable significance be characterised for species specific abundance models across multiple locations?}
-	
-	\item \textbf{How does incorporation of an auto-regressive term affect the predictive ability of temperature and precipitation driven models of mosquito abundance?}
+	\item How does incorporation of an auto-regressive term affect the predictive ability of temperature and precipitation driven models of mosquito abundance?
 \end{enumerate}
+
+To answer these questions, I will be evaluating temperature and precipitation dependent multivariate GAMs of mosquito abundance constructed using surveillance datasets from five geographically dispersed locations in Florida. This study is novel for its use of comprehensive multi-species and multi-location datasets. The insights gained from this investigation should help to inform the development of cost-effective early warning systems of increases of mosquito abundances and vector-borne-disease. 
+
+%In this investigation I will take advantage of an open source mosquito abundance database to access comprehensive multi-species surveillance records in Florida, U.S.A. Florida's plentiful surveillance records reflect public health concerns stemming from a long history of mosquito-borne disease epidemics, including yellow fever, dengue, and malaria \citep{Connelly2014}. Since the start of the 21st century, this state has seen a re-emergence of dengue fever, geographically novel emergence of West Nile Virus, and locally transmitted outbreaks and incidences of Eastern Equine Encephalitis, St. Louis Encephalitis, Zika, and Chikungunya fever \citep{Connelly2014},\textbf{\cite{FloridaHealth2017}}. I first mapped openly-sourced datasets of precipitation and temperature data to Florida surveillance data and aggregated these datasets to weekly, bimonthly, and monthly time scales. I then fit univariate GAMs of the effect of each meteorological variable on mosquito abundance independently at multiple temporal lags. Model selection was used to find the best fit temporal lag length for each dataset, meteorological variable, and temporal resolution. Best fit lags of temperature and precipitation were then incorporated into a multivariate GAM of mosquito abundance. The fit and predictive ability of these multivariate models were compared across temporal resolutions. Consistency of  selected lag lengths and significance of meteorological drivers was then compared within 11 species across five Florida locations. Finally, I incorporated an AR term into multivariate GAMs and compared the relative fit and performance of auto-regressive and non-autoregressive models across datasets.
+
+
+
+%More sustainable systems are needed for vector-borne disease surveillance \citep{Vazquez-Prokopec2010}
 
 %At the end of the 20th century, the world experienced a rising global threat of vector-borne diseases (VBD) \citep{Gubler}. The incidence of many VBDs, such as malaria, yellow fever, and dengue, that had been locally eradicated in the early-to-mid 1900s, resurged under complacent public health policies and a lack of research funding \citep{Gubler1998} Of the many diseases threatening human health, mosquito borne diseases such as malaria, yellow fever, dengue, West Nile Virus, and Rift Valley fever take millions of lives every year \citep{Yang2009}. Mosquito abundances are affected by many factors, including land-use, elevation, and vegetation cover, but meteorological variables such as temperature and precipitation in particular can be predictors of population dynamics \citep{Yoo2016}. Rainfall produces basins of water for breeding while temperature mediates life-history processes at all life stages \citep{Yang2009, Beck-Johnson2013}. 
