--- a/Write_Up/methods.tex
+++ b/Write_Up/methods.tex
@@ -2,13 +2,14 @@
 
 \subsection{Mosquito Abundance Data}
 
-Mosquito count data was obtained from the VectDyn database (\textbf{FIXME CITE}). VectDyn is a global database containing spatially and temporally explicit abundance data of mosquitoes and other arthropod vectors from published data and surveillance program records. Mosquito abundance from 205 global locations was narrowed down to seven data-rich counties in Florida, U.S.A. I decided to use data from five of these counties which had multi-year surveillance records and nearly year-round sampling from which fairly continuous time series of mosquito abundances could be formed. 
+\defcitealias{FloridaHealth2017}{Florida Department of Health, 2017}
+\defcitealias{Connelly2014}{Connelly et al., 2014} % Create alias for Connelly et al., 2014
 
-Each location contained multiple trap sites. A variety of trap types were used, including BG-Sentinel traps, CDC light traps, animal-baited traps, and CDC gravid traps. Trap type can affect the efficacy of trapping for different mosquito species \citep{Li2016}. At locations with multiple traps, proportionality of each trap type was inconsistent across the time series. This would complicate conclusions of species abundances aggregated across multiple trap types. Thus, for locations with multiple types of traps, I identified the most common trap type and removed observations from all other trap types. 
+Mosquito count data was obtained from the VectDyn database from the open source VectorByte data platform (www.vectorbyte.org). VectDyn is a global database containing spatially and temporally explicit abundance data of mosquitoes and other arthropod vectors from published data and surveillance program records. Mosquito counts from 205 global locations was narrowed down to seven data-rich counties in Florida, U.S.A. Florida has a long history of mosquito-borne disease epidemics, including yellow fever, dengue, and malaria \citep{Connelly2014}. Since the start of the 21st century, this state has seen a re-emergence of dengue fever, geographically novel emergence of West Nile Virus, and locally transmitted outbreaks and incidences of Eastern Equine Encephalitis, St. Louis Encephalitis, Zika, and Chikungunya fever \citepalias{Connelly2014, FloridaHealth2017}. I decided to use data from five of these counties which had multi-year surveillance records and nearly year-round sampling from which fairly continuous time series of mosquito abundances could be formed. 
 
-%In order to account for discrepancies in data entry between true zero count instances and NA values in abundance data, I set abundance for each species to zero where at least one mosquito of any species had been caught at the same trap on the same day. 
+Each location contained multiple trap sites. A variety of trap types were used, including BG-Sentinel traps, CDC light traps, animal-baited traps, and CDC gravid traps. Trap type can affect the efficacy of trapping for different mosquito species \citep{Li2016}. At locations with multiple traps, proportionality of each trap type was inconsistent across the time series. This would complicate conclusions of species abundances aggregated across multiple trap types. Thus, for locations with multiple types of traps, I identified the most common trap type and removed observations from all other trap types. Table \ref{Tab:Locs} summarises the characteristics of mosquito trap records at each location.
 
-I averaged species-specific count data in each location and at weekly, biweekly, and monthly temporal resolutions. This transformed integer count values to averaged indicators of county-level abundance and allowed me to account for frequent variation in the number of traps deployed at each location. I aggregated species that are morphologically indistinguishable from one another according to the \textbf{ontology used by VectorBase- FIXME CITE/REFERENCE} (\textbf{list in SI}). I then removed datasets where less than 10\% of the data points were greater than zero. Species counts that were identified only to the genus or family level were also removed. After this processing, I had 161 datasets of unique species and location combinations aggregated at weekly, biweekly, and monthly resolutions). Table \ref{Tab:Locs} summarises the results of this processing at my five focal locations.
+I averaged species-specific count data in each location and at weekly, biweekly, and monthly temporal resolutions. This transformed integer count values to averaged indicators of county-level abundance and allowed me to account for frequent variation in the number of traps deployed at each location. I aggregated species that are morphologically indistinguishable from one another according to the ontology used by VectorBase (\textbf{list in SI}). Species counts that were identified only to the genus or family level were also removed. After this processing, I had 161 datasets of unique species and location combinations aggregated at weekly, biweekly, and monthly resolutions. I then removed datasets where fewer than 10\% of the data points were greater than zero. This left me with 111 weekly, 119 bimonthly, and 129 monthly datasets. Because abundance values of zero would be undefined in log transformations used in the model fitting, all abundance values were then increased by 1 unit. Because abundance really represents mosquito detection rather than true abundance, zero counts do not necessarily mean absence of mosquitoes. Zero counts rather mean that mosquito abundances were below a detectable threshold with the employed trapping methods.
 
 \begin{center}
 	\begin{tabularx}{7in}{ | L{0.5} | C{0.5} | C{0.5} | C{0.5} |}
@@ -17,7 +18,7 @@ I averaged species-specific count data in each location and at weekly, biweekly,
 		Lee & CDC Light Trap & 2008 - 2017 & 18\\
 		Manatee & CDC Light Trap & 2012 - 2016 & 48\\
 		Orange & CDC Light Trap & 2012 - 2017 & 31\\
-		Saint Johns & baited light trap & 2004 - 2015 & 38\\
+		St. Johns & baited light trap & 2004 - 2015 & 38\\
 		Walton & New Jersey Trap & 2014 - 2017 & 28\\\hline 
 	\end{tabularx}\\
 	\captionof{table}{\label{Tab:Locs} Locations of abundance data and associated length of data collection, trap type, and number of species at each location. Individual species in these locations may have abundance records that are shorter than the overall years of data of each location.}
@@ -25,48 +26,49 @@ I averaged species-specific count data in each location and at weekly, biweekly,
 
 \subsection{Meteorological Data}
 
-Temperature and precipitation datasets were obtained from the NOAA Climate Data Online database as global NetCDF raster files at a spatial resolution of 0.50 degrees latitude and 0.50 degrees longitude. Maximum temperature in Celsius and total daily precipitation in millimetres were used based on availability of data. Rasters were rotated 180 degrees to match coordinate rotation of trap locations. Maximum daily temperature and total precipitation values were then extracted by taking the mean of the bilinear interpolation of the 4 closest raster cells to each trap location. Each raster file contained one year of meteorological data, and so this procedure was repeated for each year of the surveillance period. I then mapped the extracted daily maximum temperature and total daily precipitation to corresponding mosquito abundances by date and trap location. 
+Temperature and precipitation datasets were obtained from the NOAA Climate Data Online database as global NetCDF raster files at a spatial resolution of 0.50 degrees latitude and 0.50 degrees longitude. Rasters were rotated 180 degrees to match coordinate rotation of trap locations. Maximum daily temperature and total precipitation values were then extracted by taking the unweighted mean of the bilinear interpolation of the 4 closest raster cells to each trap location. Each raster file contained one year of meteorological data, and so this procedure was repeated for each year of the surveillance period. I then mapped the extracted daily maximum temperature and total daily precipitation to corresponding mosquito abundances by date and trap location. 
 
 
 \subsection{Data Pre-Processing}
 
-I spatially and temporally aggregated maximum temperature data by averaging both at county-level and at weekly, biweekly, and monthly time scales. Consequently, temperature in this study refers to the average maximum daily temperature across respective temporal scales. Multiple temperature indices, including minimum, maxium, and average temperatures have all been shown to be significant drivers of mosquito abundances \citep{Chaves2013, Roiz2014, Xu2017}. Maximum temperature was chosen to capture the maximum extreme of ambient temperatures mosquitoes were exposed to as high temperatures can have detrimental effects on adult survival \citep{Marini2016}
+I spatially and temporally aggregated maximum temperature data by averaging both at county-level and at weekly, biweekly, and monthly time scales. Consequently, temperature in this study refers to the average maximum daily temperature across respective temporal scales. Multiple temperature indices, including minimum, maximum, and average temperatures have all been shown to be significant drivers of mosquito abundances \citep{Chaves2013, Roiz2014, Xu2017}. Maximum temperature was chosen to capture the maximum extreme of ambient temperatures mosquitoes were exposed to as high temperatures can have detrimental effects on adult survival  \citep{Marini2016}.
 
 Number of days of rainfall has been shown to be a more effective predictor of mosquito-borne disease incidence than cumulative precipitation \citep{Xu2017}. This is likely due to the maintenance of humid conditions over time with frequent rainfall. Humidity has been independently assessed as a significant predictor of abundance dynamics \citep{Trawinski2008}, and so this representation of precipitation may capture both humidity and precipitation effects. With this in mind, I aggregated precipitation to weekly, biweekly, and monthly scales by summing the number of days in each temporal period with non-zero cumulative precipitation. Consequently precipitation as I will further refer to it refers to a discrete number of days of rainfall, with a maximum of 7, 16, or 31 days dependent on temporal scale. 
 
-In order to investigate the effect of autoregressive predictors of abundance, I created an explanatory variable of abundance by shifting the continuous time series of response abundance by a lag of one time period; this was one week, bimonth, or month in each respective aggregation. Finally, I removed rows of data with missing values in any response or explanatory variables. By the end of this pre-processing, I had obtained three different temporally aggregated groups of equivalent species and location specific datasets. Each dataset contained explanatory variables of temperature, precipitation, and lagged abundance, as well as response variable abundance, at weekly, bimonthly, and monthly time scales.
+In order to investigate the effect of autoregressive predictors of abundance, I created an explanatory variable of abundance by shifting the continuous time series of response abundance by a lag of one time period; this was one week, bimonth, or month in each respective aggregation. Finally, I removed rows of data with missing values in any response or explanatory variables. By the end of this pre-processing, I had obtained three different temporally aggregated groups of species and location specific datasets. Each dataset contained explanatory variables of temperature, precipitation, and lagged abundance, as well as response variable abundance, at weekly, bimonthly, and monthly time scales.
 
 
 \subsection{Model Structure}
 
-I used univariate generalized additive models for each dataset to determine the best-fit temporal lags between abundance and temperature as well as between abundance and precipitation. Because aggregated abundance values are positive, non-integer, and non-normally distributed, I used a Gamma family distribution with a log-link function. These models had the form:
+I used univariate GAMs for each dataset to determine the best-fit temporal lags between abundance and temperature as well as between abundance and precipitation. Because aggregated abundance values were positive, non-normally distributed and non-integer, I used Gamma family distribution GAM.. These models had the form:
+
 \begin{equation}
-	ln(V_t + 1) = a_0 + f_1(T_{t-l_T}) + \epsilon_t
+	log(\EX(V_t + 1)) = a_0 + f_1(T_{t-l_T})
 	\label{eq: univariateT}
 \end{equation}
 \begin{equation}
-	ln(V_t + 1) = a_0 + f_1(P_{t-l_P}) + \epsilon_t
+	log(\EX(V_t + 1)) = a_0 + f_1(P_{t-l_P}) 
 	\label{eq: univariateP}
 \end{equation}
 
+$V_t$ is abundance at time $t$. $a_0$ is the intercept, $T_{t-l_T}$ and $P_{t-l_P}$ are the temperature and precipitation at $l_T$ and $l_P$, respectively, time periods prior to time $t$. $f_1$ is a smooth function comprised of cubic polynomial basis functions. Each smooth function was allowed up to nine degrees of freedom, equal to 9 basis functions, to allow for flexibility in the model fit. The penalisation process in GAM fitting reduces the degrees of freedom to an optimised number for each smooth function. If a smooth function had fewer than ten unique data points, such as with weekly precipitation datasets with values between zero and seven, this upper limit needed to be lowered. The maximum degrees of freedom in these cases was set to one less than the number of unique values for that smooth function. 
 
-$V_t$ is abundance at time $t$, $a_0$ is the intercept, $T_{t-l_T}$ and $P_{t-l_P}$ are the temperature and precipitation at $l_T$ and $l_P$, respectively, time periods prior to time $t$. One is added to abundance at time $t$ in order to prevent undefined values from the logarithm of zero abundance values. $f_1$ is a smooth function comprised of cubic polynomial basis functions. Each smooth function was allowed up to nine basis functions to account for flexibility in the model fit. The penalisation process in GAM fitting reduces the number of basis functions to an optimised number for each smooth function. If a smooth function had fewer than ten unique data points, such as with weekly precipitation datasets with values between zero and seven, this upper limit needed to be lowered. The maximum number of basis functions in these cases was set to one less than the number of unique values for that smooth function. 
-
-The use of cubic polynomial basis functions is an effective way to avoid the underestimation of standard error caused by concurvity with non-parametric basis functions \citep{Dominici2002, Ramsay2003}. Concurvity is the extent to which each smooth function can be approximated by other smooth function predictors and is analogous to multicollinearity in linear models. Because of the way variances are estimated in GAMs, concurvity can cause cause underestimation of p-values and thus lead to Type I errors \citep{Ramsay2003}. I used shrinkage methods to allow for full penalisation of spline complexity and REML (restricted maximum likelihood) for optimising smooth parameter estimates. Both of these smooth function estimation methodologies have been shown to maximise the predictive ability of GAMs \citep{Marra2011}. 
-%I restricted the number of basis functions to nine for most smooth functions. This allowed me to generalise control for overfitting of the GAM across all datasets. Precipitation smooth functions for datasets with fewer than nine unique values for precipitation were set to the maximum number of basis functions allowable. This is equal to the number of unique values of the variable. This was mostly applicable to weekly datasets, which could have a maximum of eight unique values for precipitation.
+The use of cubic polynomial basis functions is an effective way to avoid the underestimation of standard error caused by concurvity with non-parametric basis functions \citep{Dominici2002, Ramsay2003}. Concurvity is the extent to which each smooth function can be approximated by other smooth function predictors and is analogous to multicollinearity in linear models. Because of the way variances are estimated in GAMs, concurvity can cause cause underestimation of p-values and thus lead to Type I errors \citep{Ramsay2003}. I used shrinkage methods to allow for full penalisation of spline complexity and REML for optimising smooth parameter estimates. Both of these smooth function estimation methodologies have been shown to maximise the predictive ability of GAMs \citep{Marra2011}. 
 
 Each dataset was also fit with two multivariate models, each incorporating temperature and precipitation, and one of which incorporating an autoregressive term.
 
 \begin{equation}
-	ln(V_t + 1) = a_0 + f_1(T_{t-l_T}) + f_2(P_{t-l_P}) + \epsilon_t
+	log(\EX(V_t + 1)) = a_0 + f_1(T_{t-l_T}) + f_2(P_{t-l_P})
 	\label{eq: multivariate1}
 \end{equation}
 \begin{equation}
-	ln(V_t + 1) = a_0 + f_1(T_{t-l_T}) + f_2(P_{t-l_P}) + f_3(V_{t-1} + 1) + \epsilon_t
+	log(\EX(V_t + 1)) = a_0 + f_1(T_{t-l_T}) + f_2(P_{t-l_P}) + f_3(V_{t-1} + 1)
 	\label{eq: multivariate2}
 \end{equation}
 
+\begin{flushleft}
 In Equation \ref{eq: multivariate2}, $V_{t-1}$ is the abundance one time step prior to abundance at time $t$. 
+\end{flushleft}
 
 
 \subsection{Model Selection and Evaluation}
@@ -91,7 +93,7 @@ AIC (Equation \ref{eq: AIC}) determines the likelihood of a given model while pe
 The Akaike weight of each best fit model was calculated in order to indicate the confidence in this lag as compared to other univariate lagged models. Once best-fit lags of meteorological variables for each dataset and temporal scale were determined, these lags were incorporated into multivariate models \ref{eq: multivariate1} and \ref{eq: multivariate2}. 
 
 
-In order to compare equivalent datasets across resolutions, datasets were removed from each temporal aggregation that lacked matching datasets at other temporal resolutions due to filtering for at least 10\% non-zero values. Mean Absolute Error (MAE, Equation \ref{eq: MAE}) and deviance explained were used to compare the performance of lagged models at different temporal resolutions.  Deviance explained is a relative measure that compares the likelihood of the proposed model to the likelihood of a saturated model with a parameter for each term and has a functionality equivalent to R\textsuperscript{2} for non-Gaussian distribution families, such as the Gamma distribution that was used in this study \citep{Nelder1972}. MAE (Mean Absolute Error) is an absolute measure that can be interpreted as the average error in the number of mosquitoes predicted for each dataset. Because it is non-directional, I also calculated mean bias (MB, Equation \ref{eq: MB}) to understand the overall under and overestimation of the data by the fitted model. MAE and mean bias for each dataset were found through cross validation.  In equations \ref{eq: MAE} and \ref{eq: MB}, $N$ is the number of data points and $O_i$ and $P_i$ are observed and predicted points, respectively. 
+In order to compare equivalent datasets across resolutions, datasets were removed from the 119 bimonthly and 129 monthly datasets to match the species and location composition of the 111 weekly datasets. Mean Absolute Error (MAE, Equation \ref{eq: MAE}) and deviance explained were used to compare the performance of lagged models at different temporal resolutions.  Deviance explained is a relative measure that compares the likelihood of the proposed model to the likelihood of a saturated model with a parameter for each term and has a functionality equivalent to R\textsuperscript{2} for non-Gaussian distribution families, such as the Gamma distribution that was used in this study \citep{Nelder1972}. MAE (Mean Absolute Error) is an absolute measure that can be interpreted as the average error in the number of mosquitoes predicted for each dataset. Because it is non-directional, I also calculated mean bias (MB, Equation \ref{eq: MB}) to understand the overall under and overestimation of the data by the fitted model. 
 
 \begin{equation}
 MAE = \frac{1}{N}\sum{|O_i - P_i|}
@@ -103,9 +105,9 @@ MB = \frac{1}{N}\sum{(O_i - P_i)}
 \label{eq: MB}
 \end{equation}
 
-After finding the temporal resolution that best described the data, datasets at this temporal resolution was used for further analysis on comparison of variable significance and comparison of autoregressive and non-autoregressive models.%I chose MAE over RMSE because RMSE would be larger for datasets with more data points. This would make comparisons across equivalent datasets at different temporal resolutions favour higher resolution data, fit notwithstanding.
+$N$ is the number of data points and $O_i$ and $P_i$ are observed and predicted points, respectively. MAE and mean bias for each dataset were found through 10-fold cross validation.  This is a form of out-of sample model validation. The dataset is randomized then split into 10 equal sections, or folds. One fold is withheld while the model is trained on the remaining nine sections. The model is then tested on the out-of-sample fold and measures of fit, in this study, MAE, are calculated. This procedure is repeated nine more times and the 10 resultant MAE values are averaged. MAE thus is representative of the out-of-sample predictive power of the model. I used MAE over residual mean square error (RMSE) because RMSE is increases with number of data points and is only appropriate for comparison of equally sized datasets. This would make comparisons across equivalent datasets at different temporal resolutions biased against higher resolution data, fit notwithstanding. After finding the temporal resolution that best fit and predicted the data using deviance explained and MAE, datasets at this temporal resolution was used for all further analysis.%
 
-Significance of temperature and precipitation in multivariate models of mosquito abundance (Equation \ref{eq: multivariate1}) were compared across all datasets, between genus groups, and within species. Covariates were considered significant if smooth functions had p values of less than 0.05. %\citep{Wood2013}
+A subset of species that were present in all five locations were used to examine the consistency of best fit lags and significance of meteorological drivers across locations.  Covariates were considered significant if smooth functions had p values of less than 0.05. %\citep{Wood2013}
 
 Corrected AIC and deviance explained were used to compare the performance of the autoregressive and non-autoregressive models for each dataset. Relative change in deviance explained between the two multivariate models was be found through differencing. Comparison of model fit was assessed also by finding the minimum corrected AIC between the two models. Models with differences in AIC of less than two were considered to be equally best fit \citep{JOHNSON2004101}.
 
