--- a/Write_Up/results.tex
+++ b/Write_Up/results.tex
@@ -1,6 +1,6 @@
 \section{Results}
 
-Each temporal resolution contained 161 datasets of unique species and location combinations in each temporal resolution. 50 weekly, 42 bimonthly, and 32 monthly datasets were removed that where less than 10\% of the data was non-zero. Time series of temperature, precipitation, and abundance data for two sample datasets can be found in Fig \ref{fig: ts_plots}. 
+Time series of temperature, precipitation, and abundance data for two sample datasets can be found in Fig \ref{fig: ts_plots}. Temperature ranges in each location varied by a minimum of 15 \degree C in Manatee county to to a maximum of 27 \degree C in St. Johns county. Frequency of rainfall in all counties tended to peak in wet summer rainy seasons.  
 
 %\subsection{Lag Selection}
 %Selection by AIC of the best fit temperature lags in univariate models of mosquito abundance  (Equation \ref{eq: univariateT}) revealed that temperature in the contemporary time period ($l_T = 0$) was most frequently the best fit lag across all temporal resolutions. For precipitation models (Equation \ref{eq: univariateP}), lags of one and two weeks at the weekly scale were nearly equally most frequent (selected in 14 and 13 datasets, respectively). At the bimonthly scale, best fit lags of zero lags were most frequent but were favoured in only one more dataset than precipitation with one half month lag (31 and 30 datasets, respectively). At the monthly scale, the contemporary month was most frequently the best fit lag.
@@ -51,7 +51,9 @@ Each temporal resolution contained 161 datasets of unique species and location c
 
 \subsection{Which level of temporal resolution of temperature and precipitation data is best able to predict mosquito abundances?}
 
-The fit of multivariate models (Fig \ref{fig: multivar}) of temperature and abundance at best fit lags were compared across weekly, bimonthly, and monthly resolutions (Table \ref{tab: bestresdevexplained}) using MAE and deviance explained. 111 out of the original 161 datasets were used for this comparison. The fifty datasets that were removed had fewer than 10\% non-zero data points or did not converge to a multivariate model due to a lack of sufficient data in at least one of the temporal resolutions. In all locations besides St. Johns, monthly aggregated datasets had a higher median deviance explained than the median deviance explained at weekly and bimonthly resolutions. Three out of five locations had the lowest median MAE at the monthly resolution, indicating that monthly datasets had tended to have less prediction error than other resolutions. St Johns datasets had equal median MAE at every resolution, while Lee datasets had the lowest median error at the weekly resolution. Because monthly datasets could explain the most deviance in four out of five locations, and had the lowest median MAE in three out of five locations, this resolution was used for the rest of the analysis.
+The fit of multivariate models (Fig \ref{fig: multivar}) of temperature and abundance at best fit lags were compared across weekly, bimonthly, and monthly resolutions (Table \ref{tab: bestresdevexplained}) using MAE and deviance explained. In all locations besides St. Johns, monthly aggregated datasets had a higher median deviance explained than the median deviance explained at weekly and bimonthly resolutions. Three out of five locations had the lowest median MAE at the monthly resolution, indicating that monthly datasets had tended to have less prediction error than other resolutions. St. Johns datasets had equal median MAE at every resolution, while Lee datasets had the lowest median error at the weekly resolution. Because monthly datasets could explain the most deviance in four out of five locations, and had the lowest median MAE in three out of five locations, this resolution was used for the rest of the analysis.
+
+At this time, I would also talk about mean bias. I'm still mulling over my mean bias results, however, so this will be updated in my final draft.
 
 % MAE table
 \begin{table}[h!]
@@ -84,7 +86,7 @@ I used corrected AIC selection in univariate models of temperature and precipita
 
 In order to assess the consistency of best-fit meteorological model characteristics in individual species across locations, I narrowed my monthly dataset to eleven species that occurred in all five locations and examined the frequency of best-fit lags and significant variables in each species. Nine out of eleven species (81.8\%) had single temperature lag that was preferred in a majority of locations (Fig \ref{fig: acrosslocation}A.). Only one species, \textit{Psorophora ciliata}, had consistent best fit lags for temperature across all locations. Eight of the eleven species had a precipitation lag that was best fit for a majority of the locations, but only 1 species, \textit{Aedes infirmatus}, had a single lag length consistently chosen across all locations (Fig \ref{fig: acrosslocation}B.).
 
-Across 128 monthly datasets with sufficient non-zero values and convergence in a multivariate model of abundance, models with significance in both temperature and precipitation was slightly more common than other combinations of variables. Variable categories were sorted by number of datasets where only temperature (25.8\%), only precipitation (25.0\%), both variables (30.5\%), or neither variable (18.8\%) was significant (Fig \ref{fig: acrosslocation}C.). In the focal eleven species, there were no species with a single category of significant predictors consistent across locations. Eight out of eleven species (72.7\%), however, had a single category of significant predictors in at least a majority of locations.  
+Across 128 monthly that successfully converged in a multivariate model of abundance, models with significance in both temperature and precipitation was slightly more common than other combinations of variables. Variable categories were sorted by number of datasets where only temperature (25.8\%), only precipitation (25.0\%), both variables (30.5\%), or neither variable (18.8\%) was significant (Fig \ref{fig: acrosslocation}C.). In the focal eleven species, there were no species with a single category of significant predictors consistent across locations. Eight out of eleven species (72.7\%), however, had a single category of significant predictors in at least a majority of locations.  
 
 
 
